refactored backend into two seperate services for product tracking and user management
